--- a/results.html
+++ b/results.html
@@ -257,12 +257,12 @@
         ctx.font="300 30px Montserrat"
 		ctx.fillText(version, 780, 90)
         ctx.textAlign="center"
-        ctx.fillText("economics Axis: " + document.getElementById("economics-label").innerHTML, 400, 175)
-        ctx.fillText("perspective Axis: " + document.getElementById("perspective-label").innerHTML, 400, 295)
-        ctx.fillText("government Axis: " + document.getElementById("emphathetic-label").innerHTML, 400, 416)
-        ctx.fillText("welfare Axis: " + document.getElementById("welfare-label").innerHTML, 400, 536)
-        ctx.fillText("drugs Axis: " + document.getElementById("drugs-label").innerHTML, 400, 656)
-        ctx.fillText("compassion Axis: " + document.getElementById("compassion-label").innerHTML, 400, 776)
+        ctx.fillText("Economics Axis: " + document.getElementById("economics-label").innerHTML, 400, 175)
+        ctx.fillText("Perspective Axis: " + document.getElementById("perspective-label").innerHTML, 400, 295)
+        ctx.fillText("Government Axis: " + document.getElementById("emphathetic-label").innerHTML, 400, 416)
+        ctx.fillText("Welfare Axis: " + document.getElementById("welfare-label").innerHTML, 400, 536)
+        ctx.fillText("Drugs Axis: " + document.getElementById("drugs-label").innerHTML, 400, 656)
+        ctx.fillText("Compassion Axis: " + document.getElementById("compassion-label").innerHTML, 400, 776)
 
         document.getElementById("banner").src = c.toDataURL();
     }
